# libwallet

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac  libwallet.pc.in
Qt/: QtWallet.pro
Qt/examples/: examples.pro
Qt/examples/getaddress/: getaddress.pro
Qt/examples/getinfo/: getinfo.pro
Qt/examples/setupdev/: setupdev.pro
Qt/examples/signethtx/: signethtx.pro
Qt/examples/wipedev/: wipedev.pro
Qt/libwallet/: libwallet.pro  protobuf.pri  wallet_global.h
Qt/tests/: tests.pro
Qt/tests/signtx_bitcoin_test/: signtx_bitcoin_test.pro
android/: README  config.h  gen_proto.sh  install.sh
android/jni/: Android.mk  Application.mk  examples.mk  libwallet.mk
examples/: Makefile.am  common.h  getaddress.cpp  getethaddress.cpp  getinfo.cpp  setupdev.cpp  signethtx.cpp  wipedev.cpp
libwallet/: Makefile.am  wallet.cpp  wallet.h
libwallet/channels/: channel.cpp  hidchannel.cpp  hidchannel.h  tcpchannel.cpp  tcpchannel.h
libwallet/common/: rlp.cpp  rlp.h  utils.cpp  utils.h
libwallet/trezor/: trezordecive.cpp  trezordecive.h
libwallet/trezor/protob/: messages.proto  types.proto
tests/: Makefile.am  common.cpp  signtx_bitcoin_test.cpp  signtx_testnet_test.cpp
